--- a/api-passenger/src/main/resources/application.yml
+++ b/api-passenger/src/main/resources/application.yml
@@ -7,3 +7,8 @@ spring:
     nacos:
       discovery:
         server-addr: 124.221.218.99:8848
+  redis:
+    host: 124.221.218.99
+    port: 6379
+    database: 0
+    password: 123456
